--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "humanize-url": "^1.0.1",
     "normalize-url": "^1.8.0",
     "underscore.string": "^3.3.4",
-    "yeoman-generator": "^1.0.0",
+    "yeoman-generator": "1.0.0",
     "yosay": "^1.2.1"
   },
   "devDependencies": {
