--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "humanize-url": "^1.0.1",
     "normalize-url": "^1.8.0",
     "underscore.string": "^3.3.4",
-    "yeoman-generator": "1.0.0",
-    "yosay": "^1.2.1"
+    "yeoman-generator": "^1.0.0",
+    "yosay": "^2.0.0"
   },
   "devDependencies": {
-    "snazzy": "^5.0.0",
-    "standard": "^8.6.0"
+    "snazzy": "^6.0.0",
+    "standard": "^9.0.0"
   },
   "standard": {
     "ignore": [
