--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "homepage": "https://github.com/tiaanduplessis/generator-dup",
   "main": "app/index.js",
   "scripts": {
-    "lint": "standard --verbose | snazzy",
-    "lint:fix": "standard --fix --verbose | snazzy"
+    "test": "npm run lint",
+    "lint": "standard",
+    "lint:fix": "standard --fix"
   },
   "files": [
     "app"
